// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select> renders 1`] = `
<select
  className="select undefined"
  onChange={[Function]}
>
  <option
    value=""
  >
    All
  </option>
  <option
    value="Alive"
  >
    Alive
  </option>
  <option
    value="unknown"
  >
    unknown
  </option>
  <option
    value="Dead"
  >
    Dead
  </option>
</select>
`;

exports[`<Select> when {categories} 1`] = `
<select
  className="select undefined"
  onChange={[Function]}
>
  <option
    value=""
  >
    All
  </option>
  <option
    value="Alive"
  >
    Alive
  </option>
  <option
    value="unknown"
  >
    unknown
  </option>
  <option
    value="Dead"
  >
    Dead
  </option>
</select>
`;

exports[`<Select> when {classname} 1`] = `
<select
  className="select Lorem Inpsum"
  onChange={[Function]}
>
  <option
    value=""
  >
    All
  </option>
  <option
    value="Alive"
  >
    Alive
  </option>
  <option
    value="unknown"
  >
    unknown
  </option>
  <option
    value="Dead"
  >
    Dead
  </option>
</select>
`;
